<resources>
    <string name="app_name">EncryptMyPasswords</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_error">Username o Password errata</string>
    <string name="prompt_new_password">Nuova Password</string>
    <string name="prompt_confirm_password">Ripeti Password</string>
    <string name="prompt_name">Nome</string>
    <string name="prompt_surname">Cognome</string>
    <string name="prompt_creationDate">Data Creazione</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="btn_register">Registra</string>
    <string name="action_sign_in_short">Accedi</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="account_description">"Descrizione"</string>
    <string name="account_type">"Categoria"</string>
    <string name="btn_add">"Aggiungi"</string>
    <string name="btn_update">"Modifica"</string>
    <string name="btn_copy">"Copia"</string>
    <string name="btn_delete">"Elimina"</string>
    <string name="txt_copied">"Copiato negli appunti"</string>
    <string name="account_desc_title">"Account - %s"</string>
    <string name="update_account_title">"Modifica Account"</string>
    <string name="account_new_title">Nuovo Account: %s</string>
    <string name="type_title">Categoria</string>
    <string name="about_menu_item">"About"</string>
    <string name="settings_menu_item">Dati personali</string>
    <string name="logout_menu_item">Esci</string>
    <string name="user_info_title">Dati Registrazione</string>
    <string name="weak">Debole</string>
    <string name="medium">Media</string>
    <string name="strong">Forte</string>
    <string name="very_strong">Molto Forte</string>
    <string name="password_strength">"Robustezza password: %s"</string>
    <string name="password_strength_text">Una password robusta deve avere almeno 8 carateri, contenere una lettera maiuscola un carattere speciale ed almeno un numero</string>
    <string name="password_ko_check_text">Le password non coincidono</string>
    <string name="password_ok_check_text">Le password coincidono</string>
    <string name="required">Campo richiesto</string>
    <string name="type_exists">"Categoria esistente"</string>
    <string name="password_key">password-key</string>
    <string name="userId_key">user-id-key</string>
    <string name="ok">Si</string>
    <string name="ko">No</string>
    <string name="dialog_tile">Conferma Rimozione</string>
    <string name="dialog_message">"Rimuovere l'Account %s"</string>
</resources>
